--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
-  background-color: gray;
+  background-color: #333;
 }
 
 .bar_top {
@@ -103,11 +103,11 @@
   display: inline-block;
   width: 230px;
   padding: 18px 0;
-  color: gray;
+  color: #333;
 }
 
 .nav-item a:hover {
-  background: gray;
+  background: #333;
   color: #fff;
 }
 
@@ -137,4 +137,47 @@
   text-align: center;
   font-weight: 500;
   line-height: 1.1;
+}
+
+.main_content {
+  text-align: center;
+}
+
+.greetings {
+  margin: 0 auto;
+  padding: 30px 0 60px 0;
+  background-color: #f8f8ff;
+}
+
+.portfolio_title {
+  margin-bottom: 15px;
+  margin-top: 30px;
+}
+
+.portfolio_title h1 {
+  font-size: 48px;
+  position: relative;
+  display: inline-block;
+}
+
+.portfolio_title img {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 7px;
+  left: -50px;
+}
+
+.portfolio_img img {
+  background-color: gray;
+  width: 250px;
+  border-radius: 50%;
+  margin: 30px auto 10px;
+}
+
+.portfolio_text {
+  width: 80%;
+  margin: 0 auto;
+  padding: 30px 0;
+  text-align: left;
 }
