--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,6 @@
 
-$color-main: rgb(128, 128, 128);
+$color-main:#333;
+$color-icon: rgb(128, 128, 128);
 
 
 //ブレークポイント
@@ -153,4 +154,55 @@ bottom: 13px;
   text-align: center;
   font-weight: 500;
   line-height: 1.1;
+}
+
+
+//main_content
+
+.main_content {
+  text-align: center;
+}
+
+.greetings {
+  margin: 0 auto;
+  padding: 30px 0 60px 0;
+  background-color: #f8f8ff;
+}
+
+.portfolio_title {
+  margin-bottom: 15px;
+  margin-top: 30px;
+  
+  h1 {
+    font-size: 48px;
+    position: relative;
+    display: inline-block;
+  }
+
+  img {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 7px;
+    left: -50px;
+
+  }
+}
+
+.portfolio_img {
+
+  img {
+    background-color: $color-icon;
+    width: 250px;
+    border-radius: 50%;
+    margin: 30px auto 10px;
+  }
+
+}
+
+.portfolio_text {
+  width: 80%;
+  margin: 0 auto;
+  padding: 30px 0;
+  text-align: left;
 }
