--- a/css/style.css
+++ b/css/style.css
@@ -156,16 +156,13 @@
 
 .portfolio_title h1 {
   font-size: 48px;
-  position: relative;
   display: inline-block;
 }
 
 .portfolio_title img {
   width: 50px;
   height: 50px;
-  position: absolute;
-  top: 7px;
-  left: -50px;
+  margin-top: 10px;
 }
 
 .portfolio_img img {
@@ -180,4 +177,235 @@
   margin: 0 auto;
   padding: 30px 0;
   text-align: left;
+}
+
+.strength_section {
+  background-color: #d8d8d8;
+  padding-bottom: 20px;
+}
+
+.strength_section p {
+  margin: 15px 0 50px;
+}
+
+.sub_title h1 {
+  position: relative;
+  z-index: 1;
+  font-size: 36px;
+  line-height: 36px;
+  font-weight: 500;
+}
+
+.sub_title h1::before {
+  content: attr(data-en);
+  position: absolute;
+  top: -30px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  color: #e4e4e4;
+  font-size: 48px;
+  z-index: -1;
+}
+
+.introduction_text {
+  width: 80%;
+  margin: 0 auto;
+  padding: 50px 0;
+  text-align: left;
+}
+
+.strength {
+  position: relative;
+  padding: 5px 0;
+  font-size: 24px;
+  z-index: 1;
+  font-weight: 500;
+}
+
+.strength::before {
+  content: attr(data-en);
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  color: #e4e4e4;
+  font-size: 32px;
+  z-index: -1;
+}
+
+.strength::after {
+  content: '';
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  width: 40px;
+  height: 2px;
+  background-color: #757575;
+}
+
+.skill_section {
+  margin: 0 auto;
+  padding: 10px 0 20px;
+  background-color: #f8f8ff;
+}
+
+.skill_section ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  list-style: none;
+  padding: 0;
+}
+
+.skill {
+  width: 300px;
+  padding: 0 50px;
+  margin: 10px;
+}
+
+.skill img {
+  width: 200px;
+}
+
+.skill img:hover {
+  -webkit-transform: translateY(-5px);
+          transform: translateY(-5px);
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+}
+
+.skill h2 {
+  position: relative;
+  padding: 5px 0;
+  margin: 10px auto;
+  font-size: 24px;
+}
+
+.skill h2::after {
+  content: '';
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  width: 40px;
+  height: 2px;
+  background-color: #757575;
+}
+
+.skill p:first-of-type {
+  margin: 20px 0 10px;
+}
+
+.service_section {
+  margin: 0 auto;
+  padding: 30px 0 60px 0;
+  background-color: #d8d8d8;
+}
+
+.service_section img {
+  margin-top: 14px;
+  margin-right: 5px;
+}
+
+.service_section ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  list-style: none;
+  padding: 0;
+}
+
+.service_item {
+  width: 300px;
+  padding: 0 50px;
+  margin: 10px;
+}
+
+.service_item img {
+  width: 200px;
+  margin: 0 auto;
+}
+
+.service_item img:hover {
+  -webkit-transform: translateY(-5px);
+          transform: translateY(-5px);
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+}
+
+.service_item h2 {
+  position: relative;
+  padding: 5px 0;
+  margin: 10px auto;
+  font-size: 24px;
+}
+
+.service_item h2::after {
+  content: '';
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  width: 40px;
+  height: 2px;
+  background-color: #757575;
+}
+
+.service_item p {
+  margin: 20px 0 10px;
+}
+
+.portfolio_section {
+  background-color: #f8f8ff;
+  margin: 0 auto;
+  padding: 30px 0 60px 0;
+}
+
+.slider {
+  margin: 50px auto;
+  width: 90%;
+  height: auto;
+  opacity: 0;
+}
+
+.card_bottom-item img {
+  width: 90%;
+  height: auto;
+}
+
+/*slick setting*/
+.slick-prev:before,
+.slick-next:before {
+  color: #000;
+}
+
+.slick-initialized {
+  opacity: 1;
+}
+
+.slick-dots {
+  bottom: -50px;
+}
+
+.slick-slide img {
+  display: inline;
+}
+
+@media (max-width: 767px) {
+  .slick-prev {
+    left: -10px;
+  }
+  .slick-next {
+    right: -10px;
+  }
 }
