--- a/sass/style.scss
+++ b/sass/style.scss
@@ -175,19 +175,17 @@ bottom: 13px;
   
   h1 {
     font-size: 48px;
-    position: relative;
     display: inline-block;
   }
 
   img {
     width: 50px;
     height: 50px;
-    position: absolute;
-    top: 7px;
-    left: -50px;
-
+    margin-top: 10px;
   }
 }
+
+
 
 .portfolio_img {
 
@@ -206,3 +204,245 @@ bottom: 13px;
   padding: 30px 0;
   text-align: left;
 }
+
+
+//strength
+
+.strength_section {
+  background-color: #d8d8d8;
+  padding-bottom: 20px;
+  p {
+    margin: 15px 0 50px;
+  }
+}
+
+
+.sub_title h1 {
+  position: relative;
+  z-index: 1;
+  font-size: 36px;
+  line-height: 36px;
+  font-weight: 500;
+
+  &::before {
+    content: attr(data-en);
+    position: absolute;
+    top: -30px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #e4e4e4;
+    font-size: 48px;
+    z-index: -1;
+}
+}
+
+.introduction_text {
+  width: 80%;
+  margin: 0 auto;
+  padding: 50px 0;
+  text-align: left;
+}
+
+.strength {
+  position: relative;
+  padding: 5px 0;
+  font-size: 24px;
+  z-index: 1;
+  font-weight: 500;
+
+  &::before {
+    content: attr(data-en);
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translateY(-50%);
+    color: #e4e4e4;
+    font-size: 32px;
+    z-index: -1;
+  }
+
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    width: 40px;
+    height: 2px;
+    background-color: #757575;
+  }
+
+}
+
+
+
+//skill
+
+.skill_section {
+  margin: 0 auto;
+  padding: 10px 0 20px;
+  background-color: #f8f8ff;
+
+ ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+ }
+}
+
+.skill {
+  width: 300px;
+  padding: 0 50px;
+  margin: 10px;
+
+  img {
+    width: 200px;
+
+    &:hover {
+      transform: translateY(-5px);
+      transition-duration: 0.5s;
+    }   
+  }
+
+ h2 {
+  position: relative;
+  padding: 5px 0;
+  margin: 10px auto;
+  font-size: 24px;
+
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    width: 40px;
+    height: 2px;
+    background-color: #757575;
+   } 
+ }
+
+ p:first-of-type {
+  margin: 20px 0 10px;
+ }
+
+
+}
+
+
+//service
+
+.service_section{
+    margin: 0 auto;
+    padding: 30px 0 60px 0;
+    background-color: #d8d8d8;
+
+    img {
+      margin-top: 14px;
+      margin-right: 5px;
+    }
+
+  ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    list-style: none;
+    padding: 0;
+  }
+
+}
+
+.service_item {
+  width: 300px;
+  padding: 0 50px;
+  margin: 10px;
+
+  img {
+    width: 200px;
+    margin: 0 auto;
+
+    &:hover {
+      transform: translateY(-5px);
+      transition-duration: 0.5s;
+    }   
+  }
+
+  h2 {
+    position: relative;
+    padding: 5px 0;
+    margin: 10px auto;
+    font-size: 24px;
+
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: -5px;
+      left: 0;
+      width: 40px;
+      height: 2px;
+      background-color: #757575;
+    }
+
+  }
+
+  p {
+    margin: 20px 0 10px;
+  }
+}
+
+
+//portfolio
+
+.portfolio_section {
+  background-color: #f8f8ff;
+  margin: 0 auto;
+  padding: 30px 0 60px 0;
+}
+
+//スライダー
+
+.slider{
+  margin: 50px auto;
+  width: 90%;
+  height: auto;
+  opacity: 0;
+}
+
+.card_bottom-item {
+  img {
+    width: 90%;
+    height: auto;
+
+  }
+}
+
+
+/*slick setting*/
+.slick-prev:before,
+.slick-next:before {
+  color: #000;
+}
+
+.slick-initialized{
+  opacity: 1;
+}
+
+.slick-dots {
+  bottom: -50px;
+}
+
+.slick-slide img {
+  display: inline;
+}
+
+  
+@include mq('sp') {
+  .slick-prev {
+    left: -10px;
+  }
+
+  .slick-next {
+    right: -10px;
+}
+}
+
