--- a/sass/style.scss
+++ b/sass/style.scss
@@ -446,3 +446,65 @@ bottom: 13px;
 }
 }
 
+footer {
+  text-align: center;
+  background: #D8D8D8;
+  padding: 30px 0 10px;;
+}
+
+.contact_warapper {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 50px;
+
+    @include mq('sp') {
+      display: block;
+    }
+}
+
+.contact-right {
+  margin-left: 10px;
+}
+
+
+.contact_text {
+  margin-bottom: 15px;
+}
+
+.follow-me {
+  list-style: none;
+  margin: 0 0 -8px;
+  overflow: hidden;
+  padding: 0;
+  
+  li {
+    margin: 0 8px 8px 0;
+    padding: 0;
+  
+    a[href*="twitter.com"]::before{
+       content: "\f099"; 
+      }
+  }
+}
+
+.follow-me li a::before {
+  background-color: #eee;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  color: #333;
+  display: inline-block;
+  font-family: FontAwesome;
+  font-size: 16px;
+  height: 44px; /* Button height */
+  line-height: 44px; /* Button height */
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+  text-align: center;
+  width: 44px; /* Button width */
+}
+.follow-me li a:hover::before {
+  color: #fff;
+}
