リニューアル

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+.header-nav h1 {
+  font-size: 22px;
+}
+
 .noscroll {
   overflow: hidden;
 }
@@ -112,34 +116,6 @@
   color: #fff;
 }
 
-.my_introduction {
-  background-image: url(../img/top_2.jpg);
-  background-size: cover;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0px;
-  z-index: -1;
-  margin: 0px auto;
-  padding: 300px 0px;
-}
-
-.name {
-  letter-spacing: 1px;
-  font-size: 40px;
-  margin: 0px auto;
-  text-align: center;
-  font-weight: 500;
-  line-height: 1.1;
-}
-
-.worker_type {
-  font-size: 16px;
-  margin: 10px 0px;
-  text-align: center;
-  font-weight: 500;
-  line-height: 1.1;
-}
-
 .main_content {
   text-align: center;
 }
@@ -147,7 +123,7 @@
 .greetings {
   margin: 0 auto;
   padding: 30px 0 60px 0;
-  background-color: #f8f8ff;
+  background-color: #f3f3f3;
 }
 
 .portfolio_title {
@@ -166,6 +142,20 @@
   margin-top: 10px;
 }
 
+.portfolio-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 80%;
+  margin: 0 auto;
+}
+
 .portfolio_img img {
   background-color: gray;
   width: 250px;
@@ -174,14 +164,14 @@
 }
 
 .portfolio_text {
-  width: 50%;
-  margin: 0 auto;
+  width: 70%;
   padding: 30px 0;
+  padding-left: 10px;
   text-align: left;
 }
 
 .strength_section {
-  background-color: #d8d8d8;
+  background-color: #f8f8ff;
   padding-bottom: 20px;
 }
 
@@ -266,9 +256,8 @@
 }
 
 .skill {
-  width: 300px;
+  width: 50%;
   padding: 0 50px;
-  margin: 10px;
 }
 
 .skill img {
@@ -303,10 +292,14 @@
   margin: 20px 0 10px;
 }
 
+.skill-img {
+  text-align: center;
+}
+
 .service_section {
   margin: 0 auto;
   padding: 30px 0 60px 0;
-  background-color: #d8d8d8;
+  background-color: #f8f8ff;
 }
 
 .service_section img {
@@ -328,7 +321,7 @@
 }
 
 .service_item {
-  width: 300px;
+  width: 30%;
   padding: 0 50px;
   margin: 10px;
 }
@@ -367,13 +360,13 @@
 }
 
 .portfolio_section {
-  background-color: #f8f8ff;
+  background-color: #f3f3f3;
   margin: 0 auto;
-  padding: 30px 0 60px 0;
+  padding: 30px 0 100px 0;
 }
 
 .slider {
-  margin: 50px auto;
+  margin: 120px auto;
   width: 90%;
   height: auto;
   opacity: 0;
@@ -413,7 +406,7 @@
 
 footer {
   text-align: center;
-  background: #D8D8D8;
+  background: #f8f8ff;
   padding: 30px 0 10px;
 }
 
@@ -442,44 +435,191 @@ footer {
   margin-left: 10px;
 }
 
+.contact-right a:hover {
+  color: #333;
+  opacity: 0.7;
+}
+
 .contact_text {
   margin-bottom: 15px;
 }
 
-.follow-me {
-  list-style: none;
-  margin: 0 0 -8px;
-  overflow: hidden;
-  padding: 0;
+/* question
+=============================================================*/
+.question {
+  width: 100%;
+  padding-bottom: 60px;
+  padding-top: 60px;
+  background: #f3f3f3;
 }
 
-.follow-me li {
-  margin: 0 8px 8px 0;
-  padding: 0;
+.question h2 {
+  font-size: 48px;
+  margin-bottom: 56px;
 }
 
-.follow-me li a[href*="twitter.com"]::before {
-  content: "\f099";
+/*=========
+accordion
+=========*/
+.accordion_area {
+  max-width: 550px;
+  margin: 0 auto;
 }
 
-.follow-me li a::before {
-  background-color: #eee;
-  border-radius: 2px;
+.accordion_one:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.ac_header {
+  background-color: #f8f8ff;
+  padding: 10px;
+  position: relative;
+  width: 100%;
+  font-size: 18px;
+  z-index: +1;
+  cursor: pointer;
+  -webkit-transition: .2s;
+  transition: .2s;
+}
+
+.ac_header .i_box {
+  position: absolute;
+  top: 50%;
+  right: 16px;
+  width: 40px;
+  height: 40px;
+  background: #f8f8ff;
+  border-radius: 50%;
+  margin-top: -20px;
+}
+
+.ac_header .i_box::before {
+  position: absolute;
+  content: "";
+  margin: auto;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  vertical-align: middle;
+  border-top: 2px solid #333;
+  width: 20px;
+  height: 0;
+  top: 0;
+  bottom: 0;
+  right: 9px;
+}
+
+.ac_header .i_box::after {
+  position: absolute;
+  content: "";
+  margin: auto;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  vertical-align: middle;
+  border-left: 2px solid #333;
+  width: 0;
+  height: 20px;
+  top: 0;
+  bottom: 0;
+  right: 18px;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.open .i_box:after {
+  height: 0;
+}
+
+.ac_inner {
+  position: relative;
+  display: none;
+  width: 716px;
+  max-width: 100%;
+  background: #f8f8ff;
+  padding: 10px;
+}
+
+.ac_inner::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 1px;
+  top: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  background: #fff;
+}
+
+@media (max-width: 767px) {
+  .ac_inner::after {
+    width: 100%;
+  }
+}
+
+.open.ac_inner {
+  display: block;
+}
+
+.open .p-faq__q-txt {
+  color: #ee7a7a;
+}
+
+/*=========
+faq
+=========*/
+.p-faq__headinner {
+  display: block;
+  position: relative;
+  line-height: 1.5;
+}
+
+.p-faq__headinner::before {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  left: 0;
+  content: "Q";
+  font-family: Oswald;
   color: #333;
-  display: inline-block;
-  font-family: FontAwesome;
-  font-size: 16px;
-  height: 44px;
-  /* Button height */
-  line-height: 44px;
-  /* Button height */
-  -webkit-transition: all .3s ease;
-  transition: all .3s ease;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
   text-align: center;
-  width: 44px;
-  /* Button width */
+  line-height: 24px;
+  font-size: 28px;
+  font-weight: 600;
 }
 
-.follow-me li a:hover::before {
-  color: #fff;
+.p-faq__bodyinner {
+  position: relative;
+  display: block;
+  padding-left: 40px;
+  background-color: #f8f8ff;
+}
+
+.p-faq__bodyinner::before {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  left: 0;
+  content: "A";
+  font-family: Oswald;
+  color: #333;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 24px;
+  font-size: 28px;
+  font-weight: 600;
+}
+
+.p-faq__a-txt {
+  font-size: 16px;
+  background: #f8f8ff;
+  line-height: 1.5;
+  letter-spacing: 0px;
+  text-align: left;
 }
