--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,6 @@
-
-$color-main:#333;
+$color-bg: #f3f3f3;
+$color-bg-primary: #f8f8ff;
+$color-main: #333;
 $color-icon: rgb(128, 128, 128);
 
 
@@ -18,6 +19,13 @@ $breakpoints: (
       }
 }
 
+
+.header-nav {
+  h1 {
+    font-size: 22px;
+  }
+
+}
 
 //ハンバーガーメニュー
 .noscroll{
@@ -128,35 +136,6 @@ bottom: 13px;
   
 }
 
-//my_introduction
-
-.my_introduction {
-  background-image: url(../img/top_2.jpg);
-  background-size: cover;
-  position: sticky;
-  top: 0px;
-  z-index: -1;
-  margin: 0px auto;
-  padding: 300px 0px;
-}
-
-.name {
-  letter-spacing: 1px;
-  font-size: 40px;
-  margin: 0px auto;
-  text-align: center;
-  font-weight: 500;
-  line-height: 1.1;
-}
-
-.worker_type {
-  font-size: 16px;
-  margin: 10px 0px;
-  text-align: center;
-  font-weight: 500;
-  line-height: 1.1;
-}
-
 
 //main_content
 
@@ -167,7 +146,7 @@ bottom: 13px;
 .greetings {
   margin: 0 auto;
   padding: 30px 0 60px 0;
-  background-color: #f8f8ff;
+  background-color: $color-bg;
 }
 
 .portfolio_title {
@@ -186,6 +165,13 @@ bottom: 13px;
   }
 }
 
+.portfolio-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 80%;
+  margin: 0 auto;
+}
 
 
 .portfolio_img {
@@ -200,9 +186,9 @@ bottom: 13px;
 }
 
 .portfolio_text {
-  width: 50%;
-  margin: 0 auto;
+  width: 70%;
   padding: 30px 0;
+  padding-left: 10px;
   text-align: left;
 }
 
@@ -210,7 +196,7 @@ bottom: 13px;
 //strength
 
 .strength_section {
-  background-color: #d8d8d8;
+  background-color: $color-bg-primary;
   padding-bottom: 20px;
   p {
     margin: 15px 0 50px;
@@ -281,7 +267,7 @@ bottom: 13px;
 .skill_section {
   margin: 0 auto;
   padding: 10px 0 20px;
-  background-color: #f8f8ff;
+  background-color: $color-bg-primary;
 
  ul {
   display: flex;
@@ -293,9 +279,8 @@ bottom: 13px;
 }
 
 .skill {
-  width: 300px;
+  width: 50%;
   padding: 0 50px;
-  margin: 10px;
 
   img {
     width: 200px;
@@ -330,13 +315,17 @@ bottom: 13px;
 
 }
 
+.skill-img {
+  text-align: center;
+}
+
 
 //service
 
 .service_section{
     margin: 0 auto;
     padding: 30px 0 60px 0;
-    background-color: #d8d8d8;
+    background-color: $color-bg-primary;
 
     img {
       margin-top: 14px;
@@ -354,7 +343,7 @@ bottom: 13px;
 }
 
 .service_item {
-  width: 300px;
+  width: 30%;
   padding: 0 50px;
   margin: 10px;
 
@@ -395,15 +384,15 @@ bottom: 13px;
 //portfolio
 
 .portfolio_section {
-  background-color: #f8f8ff;
+  background-color: $color-bg;
   margin: 0 auto;
-  padding: 30px 0 60px 0;
+  padding: 30px 0 100px 0;
 }
 
 //スライダー
 
 .slider{
-  margin: 50px auto;
+  margin: 120px auto;
   width: 90%;
   height: auto;
   opacity: 0;
@@ -449,7 +438,7 @@ bottom: 13px;
 
 footer {
   text-align: center;
-  background: #D8D8D8;
+  background: $color-bg-primary;
   padding: 30px 0 10px;;
 }
 
@@ -468,6 +457,13 @@ footer {
 
 .contact-right {
   margin-left: 10px;
+
+  a {
+    &:hover {
+      color: $color-main;  
+      opacity: 0.7;
+    }
+  }
 }
 
 
@@ -475,37 +471,184 @@ footer {
   margin-bottom: 15px;
 }
 
-.follow-me {
-  list-style: none;
-  margin: 0 0 -8px;
-  overflow: hidden;
-  padding: 0;
-  
-  li {
-    margin: 0 8px 8px 0;
-    padding: 0;
-  
-    a[href*="twitter.com"]::before{
-       content: "\f099"; 
-      }
+ /* question
+=============================================================*/
+.question {
+  width: 100%;
+  padding-bottom: 60px;
+  padding-top: 60px;
+  background: $color-bg;
+
+  h2 {
+    font-size: 48px;
+    margin-bottom: 56px;
   }
 }
 
-.follow-me li a::before {
-  background-color: #eee;
-  -webkit-border-radius: 2px;
-  border-radius: 2px;
-  color: #333;
-  display: inline-block;
-  font-family: FontAwesome;
-  font-size: 16px;
-  height: 44px; /* Button height */
-  line-height: 44px; /* Button height */
-  -webkit-transition: all .3s ease;
-  transition: all .3s ease;
-  text-align: center;
-  width: 44px; /* Button width */
+/*=========
+accordion
+=========*/
+
+.accordion_area {
+  max-width: 550px;
+  margin: 0 auto;
 }
-.follow-me li a:hover::before {
-  color: #fff;
+
+.accordion_one:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.ac_header {
+  background-color: $color-bg-primary;
+  padding:  10px;
+  position: relative;
+  width: 100%;
+  font-size: 18px;
+  z-index: +1;
+  cursor: pointer;
+  transition: .2s;
+
+  .i_box {
+    position: absolute;
+    top: 50%;
+    right: 16px;
+    width: 40px;
+    height: 40px;
+    background: $color-bg-primary;
+    border-radius: 50%;
+    margin-top: -20px;
+
+
+ 
+    
+     &::before { //+の横線
+       position: absolute;
+       content: "";
+       margin: auto;
+       box-sizing: border-box;
+       vertical-align: middle;
+
+       border-top: 2px solid $color-main;
+       width: 20px;
+       height: 0;
+       top: 0;
+       bottom: 0;
+       right: 9px;
+     }
+
+     &::after { //+の縦線
+       position: absolute;
+       content: "";
+       margin: auto;
+       box-sizing: border-box;
+       vertical-align: middle;
+
+       border-left: 2px solid $color-main;
+       width: 0;
+       height: 20px;
+       top: 0;
+       bottom: 0;
+       right: 18px;
+       transition: .3s;
+     }
+  }
+}
+
+
+.open .i_box:after {
+  height: 0;
+}
+
+.ac_inner {
+  position: relative;
+  display: none;
+  width: 716px;
+  max-width: 100%;
+  background: $color-bg-primary;
+  padding: 10px;
+
+
+  &::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 1px;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #fff;
+
+    @include mq('sp') {
+      width: 100%;
+    }
+  }
+}
+
+.open.ac_inner {
+  display: block;
+}
+
+.open .p-faq__q-txt {
+  color: rgb(238, 122, 122); //open時の文字の色
+}
+
+/*=========
+faq
+=========*/
+
+.p-faq__headinner {
+  display: block;
+  position: relative;
+  line-height: 1.5;
+
+  &::before {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
+    content: "Q";
+    font-family: Oswald;
+    color: #333;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 24px;
+    font-size: 28px;
+    font-weight: 600;
+  }
+
+}
+
+
+.p-faq__bodyinner {
+  position: relative;
+  display: block;
+  padding-left: 40px;
+  background-color: $color-bg-primary;
+
+  &::before {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
+    content: "A";
+    font-family: Oswald;
+    color: #333;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 24px;
+    font-size: 28px;
+    font-weight: 600;
+  }
+}
+
+.p-faq__a-txt {
+  font-size: 16px;
+  background: $color-bg-primary;
+  line-height: 1.5;
+  letter-spacing: 0px;
+  text-align: left;
 }
