--- a/sass/style.scss
+++ b/sass/style.scss
@@ -399,9 +399,35 @@ bottom: 13px;
 }
 
 .card_bottom-item {
+  
   img {
     width: 90%;
     height: auto;
+  }
+
+  a {
+    &:hover {
+      color: #333;
+      opacity: 0.7;
+      transition: .3s;
+    }
+  }
+
+  .card_bottom-item-text {
+    width: 90%;
+    text-align: left;
+    margin: 0 auto;
+
+    &:hover {
+      color: #333;
+      opacity: 0.7;
+      transition: .3s;
+    }
+
+    h3 {
+      padding-top: 10px;
+    }
+
 
   }
 }
