レスポンシブ対応

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -146,7 +146,7 @@ bottom: 13px;
 .greetings {
   margin: 0 auto;
   padding: 30px 0 60px 0;
-  background-color: $color-bg;
+  background-color: $color-bg-primary;
 }
 
 .portfolio_title {
@@ -171,6 +171,10 @@ bottom: 13px;
   align-items: center;
   width: 80%;
   margin: 0 auto;
+
+  @include mq('sp') {
+    display: block;
+  }
 }
 
 
@@ -190,6 +194,10 @@ bottom: 13px;
   padding: 30px 0;
   padding-left: 10px;
   text-align: left;
+
+  @include mq('sp') {
+    margin: 0 auto;
+  }
 }
 
 
@@ -275,12 +283,21 @@ bottom: 13px;
   justify-content: center;
   list-style: none;
   padding: 0;
+
+  @include mq('sp') {
+    display: block;
+  }
  }
 }
 
 .skill {
   width: 50%;
   padding: 0 50px;
+
+  @include mq('sp') {
+    width: 90%;
+    margin: 0 auto;
+  }
 
   img {
     width: 200px;
@@ -325,7 +342,7 @@ bottom: 13px;
 .service_section{
     margin: 0 auto;
     padding: 30px 0 60px 0;
-    background-color: $color-bg-primary;
+    background-color: $color-bg;
 
     img {
       margin-top: 14px;
@@ -338,6 +355,10 @@ bottom: 13px;
     justify-content: center;
     list-style: none;
     padding: 0;
+
+    @include mq('sp') {
+      display: block;
+    }
   }
 
 }
@@ -346,6 +367,10 @@ bottom: 13px;
   width: 30%;
   padding: 0 50px;
   margin: 10px;
+
+  @include mq('sp') {
+    width: 100%;
+  }
 
   img {
     width: 200px;
@@ -518,6 +543,10 @@ accordion
 .accordion_area {
   max-width: 550px;
   margin: 0 auto;
+
+  @include mq('sp') {
+    width: 350px;
+  }
 }
 
 .accordion_one:not(:last-child) {
@@ -533,6 +562,10 @@ accordion
   z-index: +1;
   cursor: pointer;
   transition: .2s;
+
+  @include mq('sp') {
+    font-size: 14px;
+  }
 
   .i_box {
     position: absolute;
@@ -642,6 +675,11 @@ faq
     line-height: 24px;
     font-size: 28px;
     font-weight: 600;
+
+    @include mq('sp') {
+      font-size: 18px;
+      left: -5px;
+    }
   }
 
 }
@@ -668,6 +706,11 @@ faq
     line-height: 24px;
     font-size: 28px;
     font-weight: 600;
+
+    @include mq('sp') {
+      font-size: 18px;
+      left: -5px;
+    }
   }
 }
 
@@ -677,4 +720,8 @@ faq
   line-height: 1.5;
   letter-spacing: 0px;
   text-align: left;
+
+  @include mq('sp') {
+    font-size: 14px;
+  }
 }
