--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@
 .greetings {
   margin: 0 auto;
   padding: 30px 0 60px 0;
-  background-color: #f3f3f3;
+  background-color: #f8f8ff;
 }
 
 .portfolio_title {
@@ -156,6 +156,12 @@
   margin: 0 auto;
 }
 
+@media (max-width: 767px) {
+  .portfolio-container {
+    display: block;
+  }
+}
+
 .portfolio_img img {
   background-color: gray;
   width: 250px;
@@ -168,6 +174,12 @@
   padding: 30px 0;
   padding-left: 10px;
   text-align: left;
+}
+
+@media (max-width: 767px) {
+  .portfolio_text {
+    margin: 0 auto;
+  }
 }
 
 .strength_section {
@@ -255,9 +267,22 @@
   padding: 0;
 }
 
+@media (max-width: 767px) {
+  .skill_section ul {
+    display: block;
+  }
+}
+
 .skill {
   width: 50%;
   padding: 0 50px;
+}
+
+@media (max-width: 767px) {
+  .skill {
+    width: 90%;
+    margin: 0 auto;
+  }
 }
 
 .skill img {
@@ -299,7 +324,7 @@
 .service_section {
   margin: 0 auto;
   padding: 30px 0 60px 0;
-  background-color: #f8f8ff;
+  background-color: #f3f3f3;
 }
 
 .service_section img {
@@ -320,10 +345,22 @@
   padding: 0;
 }
 
+@media (max-width: 767px) {
+  .service_section ul {
+    display: block;
+  }
+}
+
 .service_item {
   width: 30%;
   padding: 0 50px;
   margin: 10px;
+}
+
+@media (max-width: 767px) {
+  .service_item {
+    width: 100%;
+  }
 }
 
 .service_item img {
@@ -490,6 +527,12 @@ accordion
   margin: 0 auto;
 }
 
+@media (max-width: 767px) {
+  .accordion_area {
+    width: 350px;
+  }
+}
+
 .accordion_one:not(:last-child) {
   margin-bottom: 32px;
 }
@@ -504,6 +547,12 @@ accordion
   cursor: pointer;
   -webkit-transition: .2s;
   transition: .2s;
+}
+
+@media (max-width: 767px) {
+  .ac_header {
+    font-size: 14px;
+  }
 }
 
 .ac_header .i_box {
@@ -615,6 +664,13 @@ faq
   font-weight: 600;
 }
 
+@media (max-width: 767px) {
+  .p-faq__headinner::before {
+    font-size: 18px;
+    left: -5px;
+  }
+}
+
 .p-faq__bodyinner {
   position: relative;
   display: block;
@@ -640,10 +696,23 @@ faq
   font-weight: 600;
 }
 
+@media (max-width: 767px) {
+  .p-faq__bodyinner::before {
+    font-size: 18px;
+    left: -5px;
+  }
+}
+
 .p-faq__a-txt {
   font-size: 16px;
   background: #f8f8ff;
   line-height: 1.5;
   letter-spacing: 0px;
   text-align: left;
+}
+
+@media (max-width: 767px) {
+  .p-faq__a-txt {
+    font-size: 14px;
+  }
 }
