修正 お問い合わせ セクションタイトル

--- a/css/style.css
+++ b/css/style.css
@@ -136,10 +136,23 @@
   display: inline-block;
 }
 
+@media (max-width: 767px) {
+  .portfolio_title h1 {
+    font-size: 36px;
+  }
+}
+
 .portfolio_title img {
   width: 50px;
   height: 50px;
   margin-top: 10px;
+}
+
+@media (max-width: 767px) {
+  .portfolio_title img {
+    width: 36px;
+    height: 36px;
+  }
 }
 
 .portfolio-container {
@@ -216,6 +229,12 @@
   margin: 0 auto;
   padding: 50px 0;
   text-align: left;
+}
+
+@media (max-width: 767px) {
+  .introduction_text {
+    padding-top: 0;
+  }
 }
 
 .strength {
@@ -409,6 +428,12 @@
   opacity: 0;
 }
 
+@media (max-width: 767px) {
+  .slider {
+    margin: 60px auto;
+  }
+}
+
 .card_bottom-item img {
   width: 90%;
   height: auto;
@@ -519,6 +544,12 @@ footer {
   margin-bottom: 56px;
 }
 
+@media (max-width: 767px) {
+  .question h2 {
+    font-size: 36px;
+  }
+}
+
 /*=========
 accordion
 =========*/
@@ -559,7 +590,6 @@ accordion
   position: absolute;
   top: 50%;
   right: 16px;
-  width: 40px;
   height: 40px;
   background: #f8f8ff;
   border-radius: 50%;
@@ -581,6 +611,13 @@ accordion
   right: 9px;
 }
 
+@media (max-width: 767px) {
+  .ac_header .i_box::before {
+    width: 15px;
+    right: 0px;
+  }
+}
+
 .ac_header .i_box::after {
   position: absolute;
   content: "";
@@ -596,6 +633,13 @@ accordion
   right: 18px;
   -webkit-transition: .3s;
   transition: .3s;
+}
+
+@media (max-width: 767px) {
+  .ac_header .i_box::after {
+    height: 15px;
+    right: 6px;
+  }
 }
 
 .open .i_box:after {
@@ -627,6 +671,11 @@ accordion
   .ac_inner::after {
     width: 100%;
   }
+}
+
+.p-faq__q-txt {
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .open.ac_inner {
