--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,10 @@
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
+  -webkit-transition: -webkit-transform .3s;
+  transition: -webkit-transform .3s;
+  transition: transform .3s;
+  transition: transform .3s, -webkit-transform .3s;
   background-color: #333;
 }
 
@@ -191,7 +195,9 @@
 
 @media (max-width: 767px) {
   .portfolio_text {
+    padding: 0;
     margin: 0 auto;
+    width: 100%;
   }
 }
 
@@ -301,6 +307,8 @@
   .skill {
     width: 90%;
     margin: 0 auto;
+    padding: 0;
+    padding-top: 40px;
   }
 }
 
@@ -376,8 +384,14 @@
   margin: 10px;
 }
 
+.service_item:not(:first-child) {
+  margin-top: 40px;
+}
+
 @media (max-width: 767px) {
   .service_item {
+    margin: 0 auto;
+    padding: 0 10px;
     width: 100%;
   }
 }
@@ -385,6 +399,12 @@
 .service_item img {
   width: 200px;
   margin: 0 auto;
+}
+
+@media (max-width: 767px) {
+  .service_item img {
+    text-align: center;
+  }
 }
 
 .service_item img:hover {
@@ -413,6 +433,10 @@
 
 .service_item p {
   margin: 20px 0 10px;
+}
+
+.service-img {
+  text-align: center;
 }
 
 .portfolio_section {
